fix for videos in file explorer being covered by black square. Thank you Richard Rodriguez!

--- a/style.css
+++ b/style.css
@@ -608,3 +608,6 @@ Then, you will need to add the RTL counterpart only if needed in the rtl section
         left: 0.5em;
     }
 }
+#video_file .transition {
+    display: none !important;
+}
